# mimic1-core

./: .codecov.yml  .gitignore  .gitmodules  .travis.yml  COPYING  Makefile.am  README.md  configure.ac  dependencies.sh  libttsmimiccore.pc.in  meson.build  meson_options.txt  run_testsuite.sh  ttsmimic_core.pc.in  ttsmimiccore.pc.in
cross/: ubuntu-armhf.txt  ubuntu-mingw64.txt
include/: cst_alloc.h  cst_args.h  cst_audio.h  cst_cart.h  cst_cg.h  cst_clunits.h  cst_diphone.h  cst_endian.h  cst_endian_internal.h  cst_error.h  cst_features.h  cst_ffeatures.h  cst_file.h  cst_item.h  cst_lexicon.h  cst_lib_visibility.h  cst_lts.h  cst_phoneset.h  cst_plugins.h  cst_regex.h  cst_relation.h  cst_sigpr.h  cst_string.h  cst_sts.h  cst_synth.h  cst_tokenstream.h  cst_track.h  cst_uregex.h  cst_utterance.h  cst_val.h  cst_val_const.h  cst_val_defs.h  cst_voice.h  cst_wave.h  flite_hts_engine.h  mimic.h
main/: mimic_main.c  mimicvox_info_main.c  t2p_main.c
src/audio/: au_alsa.c  au_oss.c  au_portaudio.c  au_pulseaudio.c  au_streaming.c  au_sun.c  au_wince.c  auclient.c  audio.c  auserver.c  native_audio.h
src/cg/: cst_cg_dump_voice.c  cst_cg_load_voice.c  cst_cg_map.c  cst_mlpg.h
src/hts/: flite_hts_engine.c
src/lexicon/: cst_lexicon.c  cst_lts.c
src/regex/: compile_mimic_regex.c  cst_regex.c  regexp.c  regsub.c
src/speech/: cst_track_io.c  cst_wave_io.c  rateconv.c
src/synth/: cst_ffeatures.c  cst_ssml.c  cst_synth.c  mimic.c  us_phrasing_cart.c
src/utils/: cst_args.c  cst_endian.c  cst_error.c  cst_mmap_none.c  cst_mmap_posix.c  cst_mmap_win32.c  cst_plugins.c  cst_socket.c  cst_string.c  cst_tokenstream.c  cst_uregex.c  cst_val.c
src/wavesynth/: cst_reflpc.c
subprojects/: HTSEngine.wrap  pcre2.wrap
testsuite/: bin2ascii_main.c  lpc_resynth_main.c  multi_thread_main.c  time_voice_load.c
unittests/: include_public_headers_test_main.c  lex_test_main.c  lts_test_main.c  string_test_main.c  voice_select_test_main.c  wave_test_main.c
